<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tabu</string>
    
    <string name="main">Ekran główny</string>
    <string name="card">Karta</string>
    <string name="settings">Ustawienia</string>
    <string name="next_round">Następna runda</string>
    <string name="passed">Zaliczona</string>
    <string name="failed">Pomiń</string>
    <string name="time_remaining">Czas: %1$d s</string>
    <string name="points">Punkty: %1$d</string>
    <string name="timeout">Czas trwania rundy</string>
    <string name="end">Koniec rundy</string>
    <string name="confirmation">Potwierdzenie</string>
    <string name="end_confirmation_question">Czy na pewno chcesz wyjść ?</string>
    <string name="confirmation_question">Jesteś pewien ?</string>
    <string name="reset_score">Resetuj wynik</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="loading">Ładowanie - proszę czekać</string>
    <string name="team">Drużyna %1$d</string>
    <string name="team1">Drużyna 1</string>
    <string name="team2">Drużyna 2</string>
    <string name="team_score">Drużyna %1$d: %2$d pkt</string>
    <string name="sound">Dźwięk</string>
    <string name="extra_point_team_1">Ekstra punkt dla drużyny 1</string>
    <string name="extra_point_team_2">Ekstra punkt dla drużyny 2</string>
    
    <string name="pref_timeout_key">com.chrosciu.prefTimeout</string>
    <string name="settings_default_timeout_value">30</string>
    
    <string name="pref_sound_key">com.chrosciu.prefSound</string>
    
    <string-array name="settings_timeout_human_value">
        <item>30 sek</item>
        <item>1 min</item>
        <item>1 min 30 sek</item>
        <item>2 min</item>
    </string-array>
    <string-array name="settings_timeout_value">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>

</resources>
